<resources>
    <string name="app_name">UrTimr</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="name_hint">Nome</string>
    <string name="confirm_password_hint">Confirmar senha</string>
    <string name="do_login">Faça seu login</string>
    <string name="do_signup">Cadastre-se</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="dont_have_account">Ainda não possui cadastro?</string>
    <string name="create_account">Criar conta</string>
    <string name="already_have_account">Possui cadastro?</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="signin_button_text">Entrar</string>
    <string name="signup_button_text">Cadastrar</string>
    <string name="recover_password_button">Recuperar</string>
    <string name="back_to_login">Voltar para o login</string>
    <string name="logo_description">Urtimr logo</string>

</resources>