<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.SignInActivity"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_urtimr"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/signin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/do_login"
        android:textColor="@color/font_color"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_title"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/primary_blue"
        android:layout_marginTop="36dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_field_heigth"
            android:layout_below="@+id/signin_title"
            android:layout_alignParentEnd="true"
            android:background="@drawable/app_input"
            android:drawableStart="@drawable/app_email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/email_hint"
            android:padding="19dp"
            android:textSize="16sp"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="21dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/primary_blue"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_field_heigth"
            android:layout_below="@+id/emai_input"
            android:layout_alignParentEnd="true"
            android:background="@drawable/app_input"
            android:drawableStart="@drawable/app_lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:padding="19dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_heigth"
        android:layout_alignParentEnd="true"
        android:text="@string/signin_button_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_wrapper"
        android:layout_marginTop="42dp"
        android:background="@drawable/app_button"
         />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="159dp"
        android:layout_height="23dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@color/primary_blue"
        app:layout_constraintTop_toBottomOf="@id/signin_button"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:clickable="true"
        android:focusable="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginBottom="19dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textSize="16sp"
        android:textColor="@color/font_color"
        android:text="@string/dont_have_account" />
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary_blue"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>